# sec-gpt

./: .gitignore  README.md  TODO.md  agent-v2.py  agent.py  app.py  cache_manager.py  constants.py  pyproject.toml  requirements.txt  tools.py
experiments/: edgartools.ipynb  exp-outlines.ipynb  main.ipynb
mods/: agent_plan.py  constants.py  llm.py  query_parser.py  query_validator.py  tools.py  utils.py
schemas/: schema.py
sec_edgar_mcp/tools/: company.py  filings.py  financial.py  tool_schema.py
templates/: template.py  utils.py
