[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-gpt"
version = "0.1.0"
description = "An intelligent agent for analyzing SEC filings using LLM and ReAct framework"
authors = [{name = "Rohil", email = "rohilpal9763@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["SEC", "financial-analysis", "LLM", "agent", "filings", "AI"]

dependencies = [
    "openlit",
    "ollama",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "edgartools",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "jupyter",
    "spacy>=3.4.0",
    "pytest>=6.0.0",
]

[tool.setuptools]
packages = ["mods", "schemas", "templates"]

[tool.setuptools.package-dir]
"" = "."
